# cr-tools

./: .gitignore  Cargo.toml  README.md  build.sh  cf-pages-build.sh  container-build.sh  index.html
public/: bundle.js  cr_tools_bg.wasm
res/: main.css
src/: app.rs  index.html  lib.rs
src/components/: app.rs  card_info.rs  card_input.rs  cards_listing.rs  mod.rs
src/constants/: license.rs  meta.rs  mod.rs
src/logic/: calc.rs  events.rs  mod.rs  types.rs
src/services/: cards_agent.rs  mod.rs
web/: index.html  main.js
