[package]
name = "cr-tools"
version = "0.3.3"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/cr-tools"
homepage = "https://github.com/Bernd-L/cr-tools#readme"
readme = "README.md"
documentation = "https://docs.rs/cr-tools"
description = "Simple calculator for Clash Royale"
include = [
    "/README.md",
    "/LICENSE.md",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.sh",
    "/container-build.sh",
    "/src",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.69"
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
anyhow = "1.0.38"
thiserror = "1.0.23"
float-pretty-print = "0.1.0"
