[package]
name = "cr-tools"
version = "1.3.1"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/cr-tools"
homepage = "https://github.com/Bernd-L/cr-tools#readme"
readme = "README.md"
documentation = "https://docs.rs/cr-tools"
description = "Simple calculator for Clash Royale"
include = [
    "/README.md",
    "/LICENSE.md",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.sh",
    "/container-build.sh",
    "/src",
    "/index.html",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# Core libs
libocc = "0.4"

# Web libs
yew = "0.17"
wasm-bindgen = "0.2"

# Static data
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"

# Serde
serde = "1"
serde_derive = "1"

# Error handeling
anyhow = "1.0.38"
thiserror = "1.0"

# Other
float-pretty-print = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
